--- a/src/App.css
+++ b/src/App.css
@@ -1,31 +1,37 @@
 .App {
-  text-align: center;
+  text-align: left;
+  background: #222222;
 }
 
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  animation: App-logo-spin infinite 20s linear;
+  height: 80px;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  background-color: #222;
+  height: 50px;
+  padding: 20px;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.App-title {
+  font-size: 1.5em;
+}
+
+.App-intro {
+  font-size: large;
+  display: flex;
+  justify-content: stretch;
+}
+
+.App-content {
+  padding: 0 20px;
+  color: #fff;
+}
+
+.stats {
+  margin-bottom: 12px;
 }
 
 @keyframes App-logo-spin {
@@ -35,4 +41,33 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+textarea {
+  width: 400px;
+  height: 200px;
+  font-size: 18px;
+  padding: 8px;
+  border-radius: 4px;
+  flex-grow: 1;
+}
+
+.tag {
+  display: inline-block;
+  border-radius: 2px;
+  margin-bottom: 8px;
+  margin-right: 8px;
+  padding: 4px 8px;
+}
+
+pre {
+  overflow: auto;
+  max-height: 200px;
+  background: #333;
+  color: #fff;
+  padding: 8px;
+  border-radius: 4px;
+}
+pre.expand {
+  max-height: none;
 }
